Bug 1634766 - macos: moving a window to/from maximized/zoomed state should update the window's sizemode, r=spohl

When a window is maximized/zoomed, and then moved, we should stop treating it
as maximized/zoomed. Likewise, if the window is moved back to being zoomed/
maximized, we should also update our bookkeeping. Updating the internal
mSizemode will fire the right events and cause window.windowState to return
the correct result when JS interrogates it.

Differential Revision: https://phabricator.services.mozilla.com/D85884